remodel topic modeling after removing 'model', 'vehicle', 'car' from dictionary and add coherence model score

--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -13,20 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 138,
    "id": "005b5502-031f-400f-8636-286b89d1cc01",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /Users/jungakim/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from fuzzywuzzy import fuzz\n",
@@ -41,6 +31,8 @@
     "import pyLDAvis\n",
     "import pyLDAvis.gensim  # don't skip this\n",
     "import matplotlib.pyplot as plt\n",
+    "from itertools import chain\n",
+    "from collections import OrderedDict\n",
     "%matplotlib inline\n",
     "\n",
     "data = pd.read_csv(\"../data/data.gov/modified/dataCAFV.csv\")\n",
@@ -364,15 +356,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 147,
    "id": "4f87251e-5960-4159-9918-74556a962c46",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# # df =\\\n",
-    "# # phev.loc[phev[\"Make\"].isin(phev_partial), [\"Make\", \"Model\", \"Model Year\", \"Make-Model-Year\"]].drop_duplicates()\n",
+    "# df =\\\n",
+    "# phev.loc[phev[\"Make\"].isin(phev_partial), [\"Make\", \"Model\", \"Model Year\", \"Make-Model-Year\"]].drop_duplicates()\n",
     "\n",
     "# df=\\\n",
     "# data.loc[:, [\"Make\", \"Model\", \"Model Year\", \"Make-Model-Year\"]].drop_duplicates()\n",
@@ -398,13 +390,16 @@
     "#     except Exception as e:\n",
     "#         print(e)\n",
     "        \n",
-    "# # with open('review_dict.pkl', 'wb') as fp:\n",
-    "# #     pickle.dump(review_dict, fp)"
+    "# with open('review_dict.pkl', 'wb') as fp:\n",
+    "#     pickle.dump(review_dict, fp)\n",
+    "\n",
+    "with open(\"review_dict.pkl\", \"rb\") as fp:\n",
+    "    review_dict = pickle.load(fp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 148,
    "id": "6ff74284-b65d-4c85-a0cb-93feb6628226",
    "metadata": {},
    "outputs": [
@@ -414,7 +409,7 @@
        "419"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,46 +420,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "243ac950-08ca-40d0-831c-68cfb26d3b3d",
+   "execution_count": 149,
+   "id": "df0539bd-c09d-4dcb-bd18-61f6a55926e8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "START_SENTENCE=\\\n",
+    "\"Pros\\n\"\n",
     "END_SENTENCE=\\\n",
-    "\"What did you think of this review?\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "035064ec-4593-4e13-835c-fad9b64b5803",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\"MSRP\\n\"\n",
+    "\n",
     "for elm in review_dict.copy():\n",
     "    start_index=\\\n",
+    "    review_dict[elm].find(START_SENTENCE)\n",
+    "    end_index=\\\n",
     "    review_dict[elm].find(END_SENTENCE)\n",
-    "\n",
-    "    review_dict[elm]=review_dict[elm][:start_index]"
+    "    response = review_dict[elm][start_index:end_index].lower()\n",
+    "    for e in elm.lower().split(\"-\")[:-1]:\n",
+    "        if len(e) > 1:\n",
+    "            response=response.replace(e, \"\")\n",
+    "    review_dict[elm] =response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "d0f23dba-d4c1-4e75-a667-195d978c6fac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phev_partial_dict = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 150,
    "id": "79409bd0-ae22-45c4-84ef-4543b1683566",
    "metadata": {},
    "outputs": [],
    "source": [
+    "phev_partial_dict = {}\n",
     "for part in phev_partial:\n",
     "    for elm in review_dict:\n",
     "        if elm.startswith(part):\n",
@@ -473,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 151,
    "id": "575b1849-df3b-423c-bffa-3ccfe5117766",
    "metadata": {},
    "outputs": [
@@ -488,6 +473,7 @@
    ],
    "source": [
     "nlp_pipe = NLPpipe()\n",
+    "nlp_pipe.threshold = -1\n",
     "term_doc = nlp_pipe.fit_transform(pd.Series(review_dict), min_count = 3, threshold = -0.5)\n",
     "# tf_idf = nlp_pipe.transform(reviews, tf_idf = True)\n",
     "data_lemmatized = nlp_pipe.clean_text\n",
@@ -495,89 +481,50 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0f788eae-592b-4761-b07e-5dc7dbbe8740",
-   "metadata": {},
-   "source": [
-    "### LDA-Mallet"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "040e5de8-dabf-42e4-95b2-d5a1d366b199",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "NUM_TOPICS=3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "cee9cc05-3c16-4b1a-9266-f4a9963af5b3",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exception Command '/Users/jungakim/Desktop/Everything/CourseWork/analytics/Mallet-202108/bin/mallet import-file --preserve-case --keep-sequence --remove-stopwords --token-regex \"\\S+\" --input /var/folders/tg/r016s5t1663g7dr5vm02vbyr0000gn/T/6d2fb0_corpus.txt --output /var/folders/tg/r016s5t1663g7dr5vm02vbyr0000gn/T/6d2fb0_corpus.mallet' returned non-zero exit status 127.\n"
-     ]
-    }
-   ],
-   "source": [
-    "MALLET_FOLDER= 'Mallet-202108'\n",
-    "# MALLET_FOLDER= 'Mallet-2.0.8RC1'\n",
-    "# MALLET_FOLDER= 'Mallet-2.0.8RC3'\n",
-    "# MALLET_FOLDER= 'Mallet-202108'\n",
-    "\n",
-    "try:\n",
-    "    mallet_path = f'/Users/jungakim/Desktop/Everything/CourseWork/analytics/{MALLET_FOLDER}/bin/mallet' # update this path\n",
-    "    ldamallet = gensim.models.wrappers.LdaMallet(mallet_path, \n",
-    "                                                 corpus = term_doc,\n",
-    "                                                 num_topics = NUM_TOPICS, \n",
-    "                                                 random_seed = 100,\n",
-    "                                                 id2word = dictionary,\n",
-    "                                                 alpha = 'auto')\n",
-    "    \n",
-    "    # Visualize the topics\n",
-    "    model = gensim.models.wrappers.ldamallet.malletmodel2ldamodel(ldamallet)\n",
-    "    pyLDAvis.enable_notebook()\n",
-    "    \n",
-    "    vis = pyLDAvis.gensim.prepare(model, term_doc, dictionary)\n",
-    "    pyLDAvis.save_html(vis, f'mallet-{NUM_TOPICS}.html')\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    print(f\"Exception {e}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ca69016-af16-494b-83c9-9a0d886905a4",
+   "execution_count": 152,
+   "id": "945028ed-e9b0-425f-ac5e-acbdff5d126d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mapping = {v: k for k, v in dictionary.token2id.items()}\n",
+    "frequencies=OrderedDict()\n",
+    "for t in list(chain(*term_doc)):\n",
+    "    word, freq = mapping[t[0]], t[1]\n",
+    "    if word in frequencies:\n",
+    "        frequencies[word] += freq\n",
+    "    else:\n",
+    "        frequencies[word] = 1\n",
+    "# sorted(frequencies.items(), key=lambda x: x[1], reverse=True)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "0ea7e273-874e-4ce6-b746-8ac98f634199",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### LDA-Standard"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 153,
    "id": "951015b8-2b68-488e-94a3-9d8dd4116d28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.23014418273468093"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "NUM_TOPICS=3\n",
     "lda_model = gensim.models.ldamodel.LdaModel(corpus=term_doc,\n",
@@ -588,12 +535,15 @@
     "                                           chunksize=2000,\n",
     "                                           passes=10,\n",
     "                                           # alpha= 'auto',\n",
-    "                                           per_word_topics=True)"
+    "                                           per_word_topics=True)\n",
+    "\n",
+    "coherence_model = CoherenceModel(model=lda_model, texts=data_lemmatized, dictionary=dictionary)\n",
+    "np.mean(coherence_model.get_coherence_per_topic())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 154,
    "id": "348cbb17-3c7a-4235-a36a-7c6e2cfcb4de",
    "metadata": {},
    "outputs": [],
@@ -601,22 +551,6 @@
     "vis_data = pyLDAvis.gensim.prepare(lda_model, term_doc, dictionary, sort_topics=False)\n",
     "pyLDAvis.save_html(vis_data, f'ev-lda-num-topics-whole-{NUM_TOPICS}.html')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce676e2c-5da3-418d-ad0f-d3ddd0b884b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c852c265-3f27-43ce-8a07-f549834275d3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
